cluster/apps/development/code-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
  namespace: development
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - image: ghcr.io/linuxserver/code-server@sha256:65554a9506ba1724d282fcb94d31f558b868cf8a6fc9f594eab7f9494fb02dff
          imagePullPolicy: Always
          name: code-server
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 500m
              memory: 200Mi
          ports:
            - containerPort: 8443
          volumeMounts:
            - mountPath: /config
              name: code-server
      volumes:
        - name: code-server
          persistentVolumeClaim:
            claimName: code-server-data-pvc
