cluster/apps/development/code-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: http
  selector:
    app: code-server
