cluster/apps/development/code-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_TARGET_SKY}"
    traefik.ingress.kubernetes.io/router.middlewares: identity-forward-auth@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: "vs-code"
spec:
  tls:
    - secretName: "${SECRET_DOMAIN_ME/./-}-tls"
      hosts:
        - code.${SECRET_DOMAIN_ME}
  rules:
    - host: code.${SECRET_DOMAIN_ME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 8443
